fix(frontend): añade propiedad CSS z-index para los headers del body (primera columna)

--- a/frontend/app/Huesped/Buscar/Buscar.css
+++ b/frontend/app/Huesped/Buscar/Buscar.css
@@ -99,11 +99,12 @@ tbody > tr.selected td {
 thead {
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 2;
 }
 
 table tbody th {
     position: sticky;
     left: 0;
     background: white;
+    z-index: 1;
 }
